noinst_PROGRAMS = recurse idtest idrangetest srwskey resttest resttest_async

recurse_CFLAGS = -I$(top_srcdir)/libdroplet/include
recurse_LDADD = $(top_builddir)/libdroplet/libdroplet.la
recurse_SOURCES = recurse.c

idtest_CFLAGS = -I$(top_srcdir)/libdroplet/include
idtest_LDADD = $(top_builddir)/libdroplet/libdroplet.la
idtest_SOURCES = idtest.c

idrangetest_CFLAGS = -I$(top_srcdir)/libdroplet/include
idrangetest_LDADD = $(top_builddir)/libdroplet/libdroplet.la
idrangetest_SOURCES = idrangetest.c

srwskey_CFLAGS = -I$(top_srcdir)/libdroplet/include
srwskey_LDADD = $(top_builddir)/libdroplet/libdroplet.la
srwskey_SOURCES = srwskey.c

resttest_CFLAGS = -I$(top_srcdir)/libdroplet/include
resttest_LDADD = $(top_builddir)/libdroplet/libdroplet.la
resttest_SOURCES = resttest.c

resttest_async_CFLAGS = -I$(top_srcdir)/libdroplet/include
resttest_async_LDADD = $(top_builddir)/libdroplet/libdroplet.la
resttest_async_SOURCES = resttest_async.c
